# instruments

./: .checkpatch.conf  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODEOWNERS  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
doc/: CMakeLists.txt  contents.toml.in  index.adoc
doc/dcmotor/: index.adoc
doc/diagrams/: instrulink.drawio  instruments.drawio
doc/theme/: tutorial.yml
include/: IInstrument.h  IPeripheral.h  IUARTInstrument.h  IUARTPeripheral.h  imgui.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_sdl.h  imgui_impl_sdlrenderer.h  imgui_internal.h  implot.h  implot_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
include/bus/: InternalBus.h  WishboneSlave.h
include/instruments/: dcmotor.h  keypad.h  stm32.h  uart.h
include/instruments/protocol/: instrulink.h  protocol.h
integrity/: empty.robot
scripts/: build  check  test
scripts/ci/: check_compliance.py
src/: BaseInstrument.h  CMakeLists.txt  DCMotorInstrument.cpp  DCMotorInstrument.h  InstrumentContainer.cpp  InstrumentContainer.h  KeypadInstrument.cpp  KeypadInstrument.h  LiteUART.cpp  LiteUART.h  LiteUART.v  ScrollingBuffer.h  UARTInstrument.cpp  UARTInstrument.h  imgui.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_impl_sdlrenderer.cpp  imgui_tables.cpp  imgui_widgets.cpp  implot.cpp  implot_items.cpp  instrulink.cpp
src/dcmotor/: CMakeLists.txt  dc_motor.c  dc_motor.h  design.m  main.cpp
src/keypad/: CMakeLists.txt  main.cpp
src/liteuart/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/dcmotor/: CMakeLists.txt  DCMotorTest.cpp
tests/keypad/: CMakeLists.txt  KeypadTest.cpp
tests/liteuart/: CMakeLists.txt  LiteUARTTest.cpp
zephyr/: CMakeLists.txt  Kconfig
